Fix nav: column-gap 10px for 3 cards per row at 1080px, revert container padding

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,9 +52,9 @@ img {
 }
 
 .container {
-  width: 1110px;
+  max-width: 1110px;
   margin: 0 auto;
-  padding: 0;
+  padding: 0 15px;
 }
 
 .d-block { display: block; }
@@ -176,6 +176,7 @@ img {
 
 /* navigation */
 #navigation {
+  padding-top: 100px;
   margin-top: -100px;
 }
 
@@ -186,6 +187,8 @@ img {
 .nav-grid {
   display: flex;
   flex-wrap: wrap;
+  column-gap: 10px;
+  row-gap: 20px;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -194,24 +197,11 @@ img {
 .nav-card {
   flex: 1 1 350px;
   padding: 24px;
-  margin: 0 15px 20px;
 }
 
 .nav-card-title {
   background: none;
   padding: 0;
-}
-
-.nav-card:nth-of-type(3n+1) {
-  margin-left: 0;
-}
-
-.nav-card:nth-of-type(3n+3) {
-  margin-right: 0;
-}
-
-.nav-card:nth-of-type(n+4) {
-  margin-bottom: 0;
 }
 
 .nav-heading {
@@ -286,7 +276,7 @@ img {
 /* footer */
 .subscribe {
   padding: 55px;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .subscribe-title {
@@ -295,10 +285,6 @@ img {
   line-height: 1.2;
   font-weight: 400;
   margin: 0;
-}
-
-.subscribe form {
-  margin-right: 55px;
 }
 
 .subscribe-form {
